# reboot-examples

./: .gitignore  .rsmrc  BUILD.bazel  README.md  everything_test.sh  readme_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.tests/: all_pytests.sh  readme_test.sh
api/bank/v1/: account.proto  bank.proto
api/google/protobuf/: descriptor_rsm.py
api/hello_constructors/v1/: greeter.proto  hello.proto
api/hello_legacy_grpc/v1/: greeter.proto
api/hello_tasks/v1/: hello.proto
api/hello_world/v1/: greeter.proto  greeter_pb.js  greeter_pb2.py  greeter_pb2_grpc.py  greeter_rsm.py  greeter_rsm.ts
api/resemble/v1alpha1/: README.md  options.proto  options_rsm.py
bank/: .rsmrc  README.md  cli.py
bank/backend/src/: account_servicer.py  bank_servicer.py  main.py  requirements.txt
bank/backend/tests/: account_servicer_test.py  bank_servicer_test.py
hello-constructors/: .rbtrc  .rsmrc  README.md
hello-constructors/backend/: .pytest.ini
hello-constructors/backend/src/: greeter_servicer.py  hello_servicer.py  main.py  requirements.txt
hello-constructors/backend/tests/: greeter_servicer_test.py  hello_servicer_test.py
hello-legacy-grpc/: .rsmrc
hello-legacy-grpc/backend/src/: deprecated_greeter_servicer.py  main.py  proxy_greeter_servicer.py  reboot_greeter_servicer.py  requirements.txt  resemble_greeter_servicer.py
hello-legacy-grpc/backend/tests/: greeter_servicer_test.py
hello-tasks/: .rbtrc  .rsmrc  README.md
hello-world/backend/: .pytest.ini
hello-world/web/: config-overrides.js  package-lock.json  package.json
(+13 files in other folders)
