# This `BUILD.bazel` file allows a `bazel` system (configured outside of this
# repository) to use code in this directory and its subdirectories.

load("@com_github_reboot_dev_respect//resemble/examples:rules.bzl", "write_templated_source_file")

filegroup(
    name = "everything",
    srcs = glob(
        ["**/*"],
        exclude = [
            # Files that may be created by activity in this repository, such
            # as manually following the steps of the `README.md` file, but which
            # are not part of the "source code" of this repository.
            ".venv/**/*",
            ".resemble-examples-venv/**/*",
            ".pytest_cache/**/*",
            "gen/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

write_templated_source_file(
    name = "README_md",
    src = "//resemble/examples:README.j2.md",
    dest = "README.md",
    input_yaml = "//resemble/examples:monorepo_README.md.yaml",
)
